[gd_scene load_steps=2 format=3 uid="uid://dhhcghptane4n"]

[ext_resource type="Script" path="res://scenes/ram_ui.gd" id="1_7sd2p"]

[node name="RamUI" type="Node2D"]
script = ExtResource("1_7sd2p")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 8.0
offset_bottom = 14.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"StoragePanelContainer"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Address" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "a0"
horizontal_alignment = 1

[node name="Value" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "0"
horizontal_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"StoragePanelContainer"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Address" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "a1"
horizontal_alignment = 1

[node name="Value" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "0"
horizontal_alignment = 1

[node name="PanelContainer3" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"StoragePanelContainer"

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer3"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Address" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer3/HBoxContainer3"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "a2"
horizontal_alignment = 1

[node name="Value" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer3/HBoxContainer3"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "0"
horizontal_alignment = 1

[node name="PanelContainer4" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"StoragePanelContainer"

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer4"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Address" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer4/HBoxContainer4"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "a3"
horizontal_alignment = 1

[node name="Value" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer4/HBoxContainer4"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "0"
horizontal_alignment = 1
